--- a/task2-matrix-multiplication/templates/index.html
+++ b/task2-matrix-multiplication/templates/index.html
@@ -5,44 +5,58 @@
 </head>
 <body>
     <h2>Matrix Multiplication</h2>
+
+    {% if not size %}
+    <!-- Step 1: Input matrix size -->
     <form method="post">
         <label>Matrix Size (e.g., 2 for 2x2):</label>
         <input type="number" name="size" min="1" required>
-        <button type="submit">Submit</button>
+        <button type="submit" name="submit_size">Submit Size</button>
     </form>
+    {% endif %}
 
-    {% if request.method == 'POST' and not result and not error %}
+    {% if size and not result %}
+    <!-- Step 2: Input matrices -->
     <form method="post">
-        <input type="hidden" name="size" value="{{ request.form['size'] }}">
+        <input type="hidden" name="size" value="{{ size }}">
+        
         <h3>Enter Matrix A</h3>
-        {% for i in range(size|int) %}
-            {% for j in range(size|int) %}
-                <input type="number" name="a{{i}}{{j}}" required>
+        {% for i in range(size) %}
+            {% for j in range(size) %}
+                <input type="number" name="a{{i}}{{j}}" required style="width:50px;">
             {% endfor %}
             <br>
         {% endfor %}
 
         <h3>Enter Matrix B</h3>
-        {% for i in range(size|int) %}
-            {% for j in range(size|int) %}
-                <input type="number" name="b{{i}}{{j}}" required>
+        {% for i in range(size) %}
+            {% for j in range(size) %}
+                <input type="number" name="b{{i}}{{j}}" required style="width:50px;">
             {% endfor %}
             <br>
         {% endfor %}
         <br>
-        <button type="submit">Multiply</button>
+        <button type="submit" name="submit_matrices">Multiply</button>
     </form>
     {% endif %}
 
     {% if result %}
-        <h3>Result:</h3>
+    <h3>Result (Matrix Multiplication):</h3>
+    <table border="1" cellpadding="5">
         {% for row in result %}
-            {{ row }}<br>
+            <tr>
+            {% for val in row %}
+                <td>{{ val }}</td>
+            {% endfor %}
+            </tr>
         {% endfor %}
+    </table>
+    <br>
+    <a href="/">Do Another Multiplication</a>
     {% endif %}
 
     {% if error %}
-        <p style="color: red;">{{ error }}</p>
+    <p style="color: red;">{{ error }}</p>
     {% endif %}
 </body>
 </html>
