--- a/task3-user-login/templates/login.html
+++ b/task3-user-login/templates/login.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head><title>Login</title></head>
+<head>
+    <title>Login</title>
+</head>
 <body>
     <h2>User Login</h2>
-    <form method="POST">
-        Username: <input type="text" name="username" required><br><br>
-        Password: <input type="password" name="password" required><br><br>
-        <button type="submit">Login</button>
+    <form action="/login" method="POST">
+        <label>Username:</label><br>
+        <input type="text" name="username"><br><br>
+        <label>Password:</label><br>
+        <input type="password" name="password"><br><br>
+        <input type="submit" value="Login">
     </form>
-    <p>{{ message }}</p>
+    <p>Don't have an account? <a href="/register">Register</a></p>
 </body>
 </html>
